--- a/HTML-work/BioPageSite/Index.html
+++ b/HTML-work/BioPageSite/Index.html
@@ -21,6 +21,7 @@
             and playing there. Some incidents happened where that was hindered, I injured myself and realized that
             football could be a real risk of damaging what was already damaged.
         </p>
+    <div id="first-list">
         <h2> My Favorite Hobbies</h2>
         <ul>
             <li> Lifting weights </li>
@@ -28,13 +29,15 @@
             <li> Hunting/Fishing </li>
             <li> Drawing </li>
         </ul>
+    </div>
+        <img src="Images/IMG_1497.jpg">
 
         <h3> Favorite Foods</h3>
         <ul>
             <li> Seafood </li>
             <li> Chicken </li>
             <li> Any kind of Barbecue Food </li>
-            <li> Sushi </li>
+            <li> Chinese/Japanese </li>
         </ul>
 
         <h4> Favorite Teams </h4>
